footer and spacing update

--- a/index.html
+++ b/index.html
@@ -66,76 +66,59 @@
         <!-- Page Heading -->
         <h1 class="my-4">Page Heading <small>Secondary Text</small></h1>
 
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-block">
-                        <h3><a href="#">Project One</a></h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-                    </div>
+        <!-- Card Deck -->
+        <div class="card-deck">
+            <div class="card portfolio-item">
+                <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card-block">
+                    <h4 class="card-title"><a href="#">Project One</a></h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-block">
-                        <h3><a href="#">Project Two</a></h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-                    </div>
+            <div class="card portfolio-item">
+                <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card-block">
+                    <h4 class="card-title"><a href="#">Project Two</a></h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
                 </div>
             </div>
         </div>
-        <!-- /.row -->
 
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-block">
-                        <h3><a href="#">Project Three</a></h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-                    </div>
+        <!-- Card Deck -->
+        <div class="card-deck">
+            <div class="card portfolio-item">
+                <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card-block">
+                    <h4 class="card-title"><a href="#">Project Three</a></h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-block">
-                        <h3><a href="#">Project Four</a></h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-                    </div>
+            <div class="card portfolio-item">
+                <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card-block">
+                    <h4 class="card-title"><a href="#">Project Four</a></h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
                 </div>
             </div>
         </div>
-        <!-- /.row -->
 
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-block">
-                        <h3><a href="#">Project Five</a></h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-                    </div>
+        <!-- Card Deck -->
+        <div class="card-deck">
+            <div class="card portfolio-item">
+                <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card-block">
+                    <h4 class="card-title"><a href="#">Project Five</a></h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
-                    <div class="card-block">
-                        <h3><a href="#">Project Six</a></h3>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-                    </div>
+            <div class="card portfolio-item">
+                <a href="#"><img class="card-img-top img-fluid" src="http://placehold.it/700x400" alt=""></a>
+                <div class="card-block">
+                    <h4 class="card-title"><a href="#">Project Six</a></h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
                 </div>
             </div>
         </div>
-        <!-- /.row -->
-
-        <hr>
 
         <!-- Pagination -->
         <ul class="pagination justify-content-center">
@@ -156,15 +139,16 @@
             </li>
         </ul>
 
-        <hr>
-
-        <!-- Footer -->
-        <footer class="my-5">
-            <p>Copyright &copy; Your Website 2017</p>
-        </footer>
-
     </div>
     <!-- /.container -->
+
+    <!-- Footer -->
+    <footer class="py-5 bg-inverse">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        </div>
+        <!-- /.container -->
+    </footer>
 
     <!-- jQuery Version 3.1.1 -->
     <script src="js/jquery.js"></script>
